fix jumptopresent bar

--- a/aerobase.css
+++ b/aerobase.css
@@ -3455,7 +3455,11 @@ img[src="/assets/9f358f466473586417baee7bacfba5ca.svg"] {
 	right: 5px;
 	left: 5px;
 	padding-bottom: 0;
-	margin-bottom: 5px;
+	margin-bottom: 1rem;
+}
+
+.jumpToPresentBar-G1R9s6:active {
+	margin-bottom: 1rem;
 }
 
 .newMessagesBar-265mhP {
